@@ -24,3 +24,8 @@ sfContext::createInstance($configuration);
 
 // remove all cache
 sfToolkit::clearDirectory(sfConfig::get('sf_app_cache_dir'));
+
+// load fixtures
+$data = new sfPropelData();
+$data->setDeleteCurrentData(true);
+$data->loadData(sfConfig::get('sf_data_dir').'/fixtures/test_data.yml');
